clang/test/BSC/Negative/Method/Enum/enum_instance_function_declaration/enum_instance_function_declaration.cbs
// RUN: %clang_cc1 -verify %s

enum E {
    X3,
    X4
};

int enum E::getA(enum E* this);

int main() {
  enum E foo = X3; 
  foo.getA();
  return 0;
}

int enum E::getA(enum E* this) { 
  return this->X4; // expected-error {{member reference base type 'enum E' is not a structure or union}}
}